# todo

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/cli/: ArgumentParser.cpp  ArgumentParser.hpp
src/core/: DeadlineTask.cpp  DeadlineTask.hpp  RepeatingTask.cpp  RepeatingTask.hpp  SimpleTask.cpp  SimpleTask.hpp  Task.cpp  Task.hpp  TaskStorage.cpp  TaskStorage.hpp
src/storage/: JsonFileStorage.cpp  JsonFileStorage.hpp  Storage.hpp
src/utils/: Constants.hpp  DateUtils.cpp  DateUtils.hpp  Exceptions.hpp  Terminal.hpp
tests/: CLITests.cpp  CMakeLists.txt  CoreTests.cpp  JsonFileStorageTests.cpp
